corrected alignment... now its good

--- a/css/pokecards.css
+++ b/css/pokecards.css
@@ -80,7 +80,7 @@ main {
 .infoDiv {
     position: relative;
     left: 20px;
-    top: 18px;
+    top: 24px;
 }
   
 h1 {
